[package]
name = "joke-2-image"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
actix-web = "4.3.1"
image = "0.25.5"
imageproc = "0.25.0"
rand = "0.9.0"
reqwest = "0.12.12"
rusttype = "0.9.3"
serde_json = "1.0.140"
shuttle-actix-web = "0.52.0"
shuttle-runtime = "0.52.0"
textwrap = "0.16.2"
tokio = "1.26.0"
